# nbody-gpu

./: .gitignore  CMakeLists.txt
benchmarks/: bench_utils.h  benchmark_cpu.c  benchmark_gpu.cu
cpu/: forces.c  integrator.c
cuda/: forces.cu
include/nbody/: constants.h  forces.h  forces_gpu.h  integrator.h  particle.h  presets.h  simulation.h  types.h  universe.h  vec3.h
src/: forces.c  integrator.c  main.c  main_gpu.cu  presets.c  simulation.c  universe.c
tests/: test_analytical.c  test_angular_momentum.c  test_compare.c  test_equivalence.c  test_longterm.c  test_multibody.c
